# Cpp-Game-Dev

./: .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
engine/include/: Console.h  Cursor.h  GameEngine.h  Input.h
engine/src/: Console.cpp  Cursor.cpp  GameEngine.cpp  Input.cpp
examples/: CMakeLists.txt  snake_game.cpp
